# rustjack-mobile

./: Cargo.toml  README.md  build_android.sh  x.toml
src/: game.rs  lib.rs  main.rs
