[package]
name = "rustjack-mobile"
version = "0.1.0"
edition = "2024"
authors = ["Krzysztof Furman <k_furman@outlook.com>"]
description = "A simple blackjack game in Rust with EGUI."
license = "MIT"
repository = "https://github.com/krisfur/rustjack-mobile"
readme = "README.md"

[dependencies]
eframe = { version = "0.33.0", features = [
    "default_fonts",
    "glow",
] }
egui = "0.33.0"
rand = "0.9.2"
log = "0.4.28"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rustjack_mobile"
path = "src/lib.rs"

[[bin]]
name = "rustjack-mobile"
path = "src/main.rs"